refactor: remove join table in videolist
