# docs/swagger.json
@@ -389,7 +389,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/store.Video"
+                                "$ref": "#/definitions/store.VideoList"
                             }
                         }
                     },
@@ -433,7 +433,7 @@
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/store.Video"
+                        "$ref": "#/definitions/store.VideoList"
                     }
                 },
                 "limit": {
@@ -461,35 +461,17 @@
                 }
             }
         },
-        "store.Video": {
+        "store.VideoList": {
             "type": "object",
             "properties": {
-                "actor": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
                 "category": {
                     "type": "string"
                 },
                 "created_at": {
                     "type": "string"
                 },
-                "description": {
-                    "type": "string"
-                },
-                "director": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
                 "id": {
                     "type": "integer"
-                },
-                "link_embed": {
-                    "type": "string"
                 },
                 "name": {
                     "type": "string"
@@ -502,18 +484,6 @@
                 },
                 "slug": {
                     "type": "string"
-                },
-                "studio": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "tag": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
                 },
                 "thumb_url": {
                     "type": "string"
